--- a/contact.html
+++ b/contact.html
@@ -8,54 +8,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;600;700;800&family=Barlow:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css"/>
+  <script src="https://unpkg.com/lucide@latest"></script>
 </head>
 <body>
-  <div class="topbar">
-    <div class="container topbar-inner">
-      <span>&#128222; <a href="tel:0469022535">046 902 2535</a></span>
-      <span>&#128336; Mon&ndash;Fri: 7am&ndash;5pm &nbsp;|&nbsp; Sat: 8:30am&ndash;1pm</span>
-      <span>&#128205; Kells Road, Navan, Co. Meath</span>
-    </div>
-  </div>
-  <header class="header">
-    <div class="container header-inner">
-      <a href="index.html" class="logo">
-        <img src="logo.svg" alt="Navan Hire &amp; Hardware" class="logo-img"/>
-      </a>
-      <nav class="nav">
-        <a href="index.html" class="nav-link">Home</a>
-        <a href="hardware.html" class="nav-link">Hardware &amp; DIY</a>
-        <a href="telehandlers.html" class="nav-link">Telehandlers</a>
-        <a href="hire.html" class="nav-link">Plant &amp; Tool Hire</a>
-        <a href="powered-access.html" class="nav-link">Access &amp; Spider Lifts</a>
-      </nav>
-      <div class="nhh-search-wrap">
-        <input type="search" id="nhhSearch" class="nhh-search-input" placeholder="Search equipment..." autocomplete="off" spellcheck="false"/>
-        <span class="nhh-search-icon">&#128269;</span>
-        <div class="nhh-search-results" id="nhhSearchResults"></div>
-      </div>
-      <a href="contact.html" class="btn btn-white header-cta">Get a Quote</a>
-      <a href="account.html" class="nhh-account-btn" title="Trade Login / Apply" aria-label="Account">
-        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
-          <circle cx="12" cy="8" r="4"/>
-          <path d="M4 20c0-4 3.6-7 8-7s8 3 8 7"/>
-        </svg>
-      </a>
-      <button class="hamburger" id="hamburger" aria-label="Open menu">&#9776;</button>
-    </div>
-    <div class="mobile-nav" id="mobileNav">
-      <a href="index.html">Home</a>
-      <a href="hardware.html">Hardware & DIY</a>
-      <a href="telehandlers.html">Telehandlers</a>
-      <a href="hire.html">Plant & Tool Hire</a>
-      <a href="powered-access.html">Access & Spider Lifts</a>
-      <a href="contact.html">Get a Quote</a>
-      <div class="mobile-search-wrap">
-        <input type="search" id="nhhSearchMob" class="nhh-search-input" placeholder="Search all equipment..." autocomplete="off" spellcheck="false"/>
-        <div class="nhh-search-results" id="nhhSearchResultsMob"></div>
-      </div>
-    </div>
-  </header>
+  <div class="topbar" data-component></div>
+  <header class="header" data-component></header>
 
   <section class="page-hero">
     <div class="container page-hero-content">
@@ -72,7 +29,7 @@
         <h2>Contact Details</h2>
 
         <div class="contact-detail">
-          <div class="contact-detail-icon">📞</div>
+          <div class="contact-detail-icon"><i data-lucide="phone"></i></div>
           <div>
             <h4>Phone</h4>
             <a href="tel:0469022535">046 902 2535</a>
@@ -88,7 +45,7 @@
         </div>
 
         <div class="contact-detail">
-          <div class="contact-detail-icon">📍</div>
+          <div class="contact-detail-icon"><i data-lucide="map-pin"></i></div>
           <div>
             <h4>Address</h4>
             <p>Navan Hire & Hardware<br>Whistlemount, Kells Road<br>Navan, Co. Meath<br>C15 FX6Y</p>
@@ -165,55 +122,10 @@
 
     </div>
   </div>
-
-    <footer class="footer">
-    <div class="container footer-grid">
-      <div class="footer-col">
-        <img src="logo-footer.svg" alt="Navan Hire &amp; Hardware" class="footer-logo-img"/>
-        <p style="margin-top:14px;color:rgba(255,255,255,0.7)">Whistlemount, Kells Road<br>Navan, Co. Meath, C15 FX6Y</p>
-        <p><a href="tel:0469022535" style="color:#fff">046 902 2535</a></p>
-        <p><a href="mailto:hiredesk@nhh.ie" style="color:rgba(255,255,255,0.7)">hiredesk@nhh.ie</a></p>
-      </div>
-      <div class="footer-col">
-        <h4>Hire</h4>
-        <ul>
-          <li><a href="fleet.html">Hire Fleet</a></li>
-          <li><a href="hire.html">Plant &amp; Tool Hire</a></li>
-          <li><a href="powered-access.html">Access &amp; Spider Lifts</a></li>
-          <li><a href="telehandlers.html">Telehandlers</a></li>
-        </ul>
-      </div>
-      <div class="footer-col">
-        <h4>Company</h4>
-        <ul>
-          <li><a href="hardware.html">Hardware &amp; DIY</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
-          <li><a href="account.html">Trade Account</a></li>
-        </ul>
-      </div>
-      <div class="footer-col">
-        <h4>Opening Hours</h4>
-        <p style="color:rgba(255,255,255,0.7)">Mon&ndash;Fri: 7:00am &ndash; 5:00pm<br>Saturday: 8:30am &ndash; 1:00pm<br>Sunday: Closed</p>
-        <div class="social-links">
-          <a href="https://www.facebook.com/NavanHireHardware" target="_blank" rel="noopener" aria-label="Facebook">
-            <svg viewBox="0 0 24 24" fill="currentColor"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"/></svg>
-          </a>
-          <a href="https://www.instagram.com/navanhirehardware" target="_blank" rel="noopener" aria-label="Instagram">
-            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"/><circle cx="12" cy="12" r="4"/><circle cx="17.5" cy="6.5" r="1" fill="currentColor" stroke="none"/></svg>
-          </a>
-          <a href="https://www.linkedin.com/company/navan-hire-hardware" target="_blank" rel="noopener" aria-label="LinkedIn">
-            <svg viewBox="0 0 24 24" fill="currentColor"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"/><rect x="2" y="9" width="4" height="12"/><circle cx="4" cy="4" r="2"/></svg>
-          </a>
-        </div>
-      </div>
-    </div>
-    <div class="footer-bottom">
-      <div class="container">
-        <p>&copy; 2026 Navan Hire &amp; Hardware. All rights reserved. | 100% Irish Owned</p>
-      </div>
-    </div>
-  </footer>
+  <footer class="footer" data-component></footer>
+  <script src="components.js"></script>
   <script src="search.js"></script>
   <script src="main.js"></script>
+  <script>lucide.createIcons();</script>
 </body>
 </html>
