--- a/nhh-portal-demo.html
+++ b/nhh-portal-demo.html
@@ -199,15 +199,30 @@ tbody tr.clickable:hover td{background:#fff5f5}
 .status-steps{display:flex;gap:0;margin-top:6px}
 .status-step{flex:1;text-align:center;font-size:9px;font-weight:700;text-transform:uppercase;letter-spacing:.5px;color:var(--grey)}
 .status-step.done{color:var(--green)}.status-step.active{color:var(--amber)}
+
+/* Lucide icon sizing for portal */
+.sb-a [data-lucide]{width:14px;height:14px;stroke:currentColor;fill:none;stroke-width:2;flex-shrink:0;opacity:.6}
+.sb-a.on [data-lucide]{opacity:1}
+.stat-ic [data-lucide]{width:17px;height:17px;fill:none;stroke-width:2}
+.qc-ic [data-lucide]{width:15px;height:15px;stroke:var(--red);fill:none;stroke-width:2}
+.acct-btn [data-lucide]{width:16px;height:16px;stroke:#fff;fill:none;stroke-width:1.8}
+.lp-ic [data-lucide]{width:19px;height:19px;stroke:#555;fill:none;stroke-width:1.7}
+.doc-arr [data-lucide]{width:12px;height:12px;stroke:currentColor;fill:none;stroke-width:2}
+.call-btn [data-lucide]{width:12px;height:12px;stroke:currentColor;fill:none;stroke-width:2}
+.back-fab [data-lucide]{width:12px;height:12px;stroke:#fff;fill:none;stroke-width:2.5}
+.soc a [data-lucide]{width:15px;height:15px}
+.topbar-icon{width:14px;height:14px;vertical-align:-2px;display:inline-block}
+
 @media(max-width:800px){.sb{display:none}.stats,.qa{grid-template-columns:1fr 1fr}.g2,.g3{grid-template-columns:1fr}.ll{display:none}.content{padding:14px 12px}.rate-grid{grid-template-columns:1fr 1fr}}
 </style>
+  <script src="https://unpkg.com/lucide@latest"></script>
 </head>
 <body>
 <!-- TOPBAR + HEADER -->
 <div class="topbar">
-  <span>📞 <a href="tel:0469022535">046 902 2535</a></span>
-  <span>🕐 Mon–Fri 7am–5pm | Sat 8:30am–1pm</span>
-  <span>📍 Kells Road, Navan, Co. Meath</span>
+  <span><i data-lucide="phone" class="topbar-icon"></i> <a href="tel:0469022535">046 902 2535</a></span>
+  <span><i data-lucide="clock" class="topbar-icon"></i> Mon–Fri 7am–5pm | Sat 8:30am–1pm</span>
+  <span><i data-lucide="map-pin" class="topbar-icon"></i> Kells Road, Navan, Co. Meath</span>
 </div>
 <header class="hdr"><div class="hdr-inner">
   <a href="#" style="display:block">
@@ -231,7 +246,7 @@ tbody tr.clickable:hover td{background:#fff5f5}
     </svg>
   </a>
   <span class="demo-pill">● DEMO</span>
-  <div class="acct-btn"><svg viewBox="0 0 24 24"><circle cx="12" cy="8" r="4"/><path d="M4 20c0-4 3.6-7 8-7s8 3 8 7"/></svg></div>
+  <div class="acct-btn"><i data-lucide="user"></i></div>
 </div></header>
 
 <!-- LOGIN PAGE -->
@@ -244,7 +259,7 @@ tbody tr.clickable:hover td{background:#fff5f5}
   <div class="lr"><div class="lbox">
     <div class="lpanel">
       <div class="lp-hdr">
-        <div class="lp-ic"><svg viewBox="0 0 24 24"><circle cx="12" cy="8" r="4"/><path d="M4 20c0-4 3.6-7 8-7s8 3 8 7"/></svg></div>
+        <div class="lp-ic"><i data-lucide="user"></i></div>
         <div><h2>Trade Login</h2><p>Access your account, invoices and hire contracts</p></div>
       </div>
       <div class="lp-form">
@@ -273,19 +288,19 @@ tbody tr.clickable:hover td{background:#fff5f5}
   <div class="shell">
     <nav class="sb"><div style="padding:14px 0">
       <span class="sb-cat">Overview</span>
-      <div class="sb-a on" id="sb-dash" onclick="go('dash')"><svg viewBox="0 0 24 24"><rect x="3" y="3" width="7" height="7"/><rect x="14" y="3" width="7" height="7"/><rect x="3" y="14" width="7" height="7"/><rect x="14" y="14" width="7" height="7"/></svg>Dashboard</div>
+      <div class="sb-a on" id="sb-dash" onclick="go('dash')"><i data-lucide="layout-dashboard"></i>Dashboard</div>
       <div class="sb-hr"></div>
       <span class="sb-cat">Hire</span>
-      <div class="sb-a" id="sb-contracts" onclick="go('contracts')"><svg viewBox="0 0 24 24"><path d="M9 11l3 3L22 4"/><path d="M21 12v7a2 2 0 01-2 2H5a2 2 0 01-2-2V5a2 2 0 012-2h11"/></svg>Machines on Hire<span class="sb-n" id="sbn-contracts">4</span></div>
-      <div class="sb-a" id="sb-offhire" onclick="go('offhire')"><svg viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"/><line x1="15" y1="9" x2="9" y2="15"/><line x1="9" y1="9" x2="15" y2="15"/></svg>Request Off-Hire</div>
-      <div class="sb-a" id="sb-pending-offhires" onclick="go('pending-offhires')"><svg viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg>Pending Off-Hires<span class="sb-n am" id="sbn-poh">1</span></div>
-      <div class="sb-a" id="sb-hirereq" onclick="go('hirereq')"><svg viewBox="0 0 24 24"><line x1="12" y1="5" x2="12" y2="19"/><line x1="5" y1="12" x2="19" y2="12"/></svg>Request Hire</div>
-      <div class="sb-a" id="sb-pending-orders" onclick="go('pending-orders')"><svg viewBox="0 0 24 24"><path d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2"/><rect x="9" y="3" width="6" height="4" rx="2"/></svg>Pending Orders<span class="sb-n gr">2</span></div>
+      <div class="sb-a" id="sb-contracts" onclick="go('contracts')"><i data-lucide="square-check-big"></i>Machines on Hire<span class="sb-n" id="sbn-contracts">4</span></div>
+      <div class="sb-a" id="sb-offhire" onclick="go('offhire')"><i data-lucide="x-circle"></i>Request Off-Hire</div>
+      <div class="sb-a" id="sb-pending-offhires" onclick="go('pending-offhires')"><i data-lucide="clock"></i>Pending Off-Hires<span class="sb-n am" id="sbn-poh">1</span></div>
+      <div class="sb-a" id="sb-hirereq" onclick="go('hirereq')"><i data-lucide="plus"></i>Request Hire</div>
+      <div class="sb-a" id="sb-pending-orders" onclick="go('pending-orders')"><i data-lucide="clipboard-list"></i>Pending Orders<span class="sb-n gr">2</span></div>
       <div class="sb-hr"></div>
       <span class="sb-cat">Finance</span>
-      <div class="sb-a" id="sb-invoices" onclick="go('invoices')"><svg viewBox="0 0 24 24"><path d="M14 2H6a2 2 0 00-2 2v16a2 2 0 002 2h12a2 2 0 002-2V8z"/><polyline points="14 2 14 8 20 8"/></svg>Invoices<span class="sb-n am" id="sbn-inv">1</span></div>
+      <div class="sb-a" id="sb-invoices" onclick="go('invoices')"><i data-lucide="file-text"></i>Invoices<span class="sb-n am" id="sbn-inv">1</span></div>
       <div class="sb-hr"></div>
-      <div class="sb-a" onclick="doLogout()"><svg viewBox="0 0 24 24"><path d="M9 21H5a2 2 0 01-2-2V5a2 2 0 012-2h4"/><polyline points="16 17 21 12 16 7"/><line x1="21" y1="12" x2="9" y2="12"/></svg>Sign Out</div>
+      <div class="sb-a" onclick="doLogout()"><i data-lucide="log-out"></i>Sign Out</div>
     </div></nav>
 
     <main class="content">
@@ -294,16 +309,16 @@ tbody tr.clickable:hover td{background:#fff5f5}
       <div class="view on" id="v-dash">
         <div class="banner"><div><h2 id="dash-greet">Hello, mccormack@build.ie</h2><p>4 machines on hire &nbsp;·&nbsp; 1 outstanding invoice &nbsp;·&nbsp; 1 pending off-hire</p></div><button class="btn btn-red" onclick="go('hirereq')">+ Request Hire</button></div>
         <div class="stats">
-          <div class="stat" onclick="go('contracts')"><div class="stat-ic ir"><svg viewBox="0 0 24 24"><path d="M9 11l3 3L22 4"/><path d="M21 12v7a2 2 0 01-2 2H5a2 2 0 01-2-2V5a2 2 0 012-2h11"/></svg></div><div><div class="stat-n">4</div><div class="stat-l">On Hire</div></div></div>
-          <div class="stat" onclick="go('pending-offhires')"><div class="stat-ic ia"><svg viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg></div><div><div class="stat-n">1</div><div class="stat-l">Pending Off-Hires</div></div></div>
-          <div class="stat" onclick="go('invoices')"><div class="stat-ic ib"><svg viewBox="0 0 24 24"><path d="M14 2H6a2 2 0 00-2 2v16a2 2 0 002 2h12a2 2 0 002-2V8z"/><polyline points="14 2 14 8 20 8"/></svg></div><div><div class="stat-n">€14,280</div><div class="stat-l">Balance Due</div></div></div>
-          <div class="stat" onclick="go('pending-orders')"><div class="stat-ic ig"><svg viewBox="0 0 24 24"><path d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2"/><rect x="9" y="3" width="6" height="4" rx="2"/></svg></div><div><div class="stat-n">2</div><div class="stat-l">Pending Orders</div></div></div>
+          <div class="stat" onclick="go('contracts')"><div class="stat-ic ir"><i data-lucide="square-check-big"></i></div><div><div class="stat-n">4</div><div class="stat-l">On Hire</div></div></div>
+          <div class="stat" onclick="go('pending-offhires')"><div class="stat-ic ia"><i data-lucide="clock"></i></div><div><div class="stat-n">1</div><div class="stat-l">Pending Off-Hires</div></div></div>
+          <div class="stat" onclick="go('invoices')"><div class="stat-ic ib"><i data-lucide="file-text"></i></div><div><div class="stat-n">€14,280</div><div class="stat-l">Balance Due</div></div></div>
+          <div class="stat" onclick="go('pending-orders')"><div class="stat-ic ig"><i data-lucide="clipboard-list"></i></div><div><div class="stat-n">2</div><div class="stat-l">Pending Orders</div></div></div>
         </div>
         <div class="qa">
-          <div class="qc" onclick="go('offhire')"><div class="qc-ic"><svg viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"/><line x1="15" y1="9" x2="9" y2="15"/><line x1="9" y1="9" x2="15" y2="15"/></svg></div><div class="qc-t">Request Off-Hire</div><div class="qc-d">Return a machine from site</div></div>
-          <div class="qc" onclick="go('hirereq')"><div class="qc-ic"><svg viewBox="0 0 24 24"><line x1="12" y1="5" x2="12" y2="19"/><line x1="5" y1="12" x2="19" y2="12"/></svg></div><div class="qc-t">Request Hire</div><div class="qc-d">Get equipment to site</div></div>
-          <div class="qc" onclick="go('invoices')"><div class="qc-ic"><svg viewBox="0 0 24 24"><path d="M14 2H6a2 2 0 00-2 2v16a2 2 0 002 2h12a2 2 0 002-2V8z"/><polyline points="14 2 14 8 20 8"/></svg></div><div class="qc-t">View Invoices</div><div class="qc-d">1 outstanding</div></div>
-          <div class="qc" onclick="go('pending-orders')"><div class="qc-ic"><svg viewBox="0 0 24 24"><path d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2"/><rect x="9" y="3" width="6" height="4" rx="2"/></svg></div><div class="qc-t">Pending Orders</div><div class="qc-d">Track hire requests</div></div>
+          <div class="qc" onclick="go('offhire')"><div class="qc-ic"><i data-lucide="x-circle"></i></div><div class="qc-t">Request Off-Hire</div><div class="qc-d">Return a machine from site</div></div>
+          <div class="qc" onclick="go('hirereq')"><div class="qc-ic"><i data-lucide="plus"></i></div><div class="qc-t">Request Hire</div><div class="qc-d">Get equipment to site</div></div>
+          <div class="qc" onclick="go('invoices')"><div class="qc-ic"><i data-lucide="file-text"></i></div><div class="qc-t">View Invoices</div><div class="qc-d">1 outstanding</div></div>
+          <div class="qc" onclick="go('pending-orders')"><div class="qc-ic"><i data-lucide="clipboard-list"></i></div><div class="qc-t">Pending Orders</div><div class="qc-d">Track hire requests</div></div>
         </div>
         <div class="card">
           <div class="card-hdr"><div class="card-title">Machines Currently on Hire</div><button class="btn btn-sm btn-out" onclick="go('contracts')">View All</button></div>
@@ -519,13 +534,13 @@ tbody tr.clickable:hover td{background:#fff5f5}
     <div class="cert-row" style="border-bottom:none;padding-top:8px;padding-bottom:8px"><div class="c-dot" style="background:var(--blue);animation:none"></div><div><div class="c-lbl">Last Inspection Date</div><div class="c-val" style="color:var(--blue)" id="mc-last-insp">8 Jan 2025</div></div></div>
     <div class="m-sec">
       <div class="m-sec-lbl">Documents &amp; Certificates</div>
-      <a class="doc" href="#" onclick="return false"><div class="doc-ic">📋</div><div><div class="doc-n">GA1 Inspection Certificate</div><div class="doc-s" id="mc-ga1-sub">Thorough Examination · Valid to Sep 2025</div></div><div class="doc-arr"><svg viewBox="0 0 24 24"><path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6"/><polyline points="15 3 21 3 21 9"/><line x1="10" y1="14" x2="21" y2="3"/></svg></div></a>
-      <a class="doc" href="#" onclick="return false"><div class="doc-ic">📖</div><div><div class="doc-n">Operator's Manual</div><div class="doc-s" id="mc-manual-sub">Equipment Operator Manual</div></div><div class="doc-arr"><svg viewBox="0 0 24 24"><path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6"/><polyline points="15 3 21 3 21 9"/><line x1="10" y1="14" x2="21" y2="3"/></svg></div></a>
-      <a class="doc" href="#" onclick="return false" style="border-color:var(--red);background:#fff8f8"><div class="doc-ic">▶️</div><div><div class="doc-n" style="color:var(--red)">Quick Start Video</div><div class="doc-s">Safety briefing &amp; controls overview</div></div><div class="doc-arr"><svg viewBox="0 0 24 24"><path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6"/><polyline points="15 3 21 3 21 9"/><line x1="10" y1="14" x2="21" y2="3"/></svg></div></a>
+      <a class="doc" href="#" onclick="return false"><div class="doc-ic">📋</div><div><div class="doc-n">GA1 Inspection Certificate</div><div class="doc-s" id="mc-ga1-sub">Thorough Examination · Valid to Sep 2025</div></div><div class="doc-arr"><i data-lucide="external-link"></i></div></a>
+      <a class="doc" href="#" onclick="return false"><div class="doc-ic">📖</div><div><div class="doc-n">Operator's Manual</div><div class="doc-s" id="mc-manual-sub">Equipment Operator Manual</div></div><div class="doc-arr"><i data-lucide="external-link"></i></div></a>
+      <a class="doc" href="#" onclick="return false" style="border-color:var(--red);background:#fff8f8"><div class="doc-ic">▶️</div><div><div class="doc-n" style="color:var(--red)">Quick Start Video</div><div class="doc-s">Safety briefing &amp; controls overview</div></div><div class="doc-arr"><i data-lucide="external-link"></i></div></a>
     </div>
-    <div class="m-foot"><div class="m-fi"><strong>Navan Hire &amp; Hardware</strong><br>046 902 2535 · hiredesk@nhh.ie</div><a href="tel:0469022535" class="call-btn"><svg viewBox="0 0 24 24"><path d="M22 16.92v3a2 2 0 01-2.18 2 19.79 19.79 0 01-8.63-3.07A19.5 19.5 0 013.25 12a19.79 19.79 0 01-3.07-8.67A2 2 0 014.11 2h3a2 2 0 012 1.72c.127.96.361 1.9.7 2.81a2 2 0 01-.45 2.11L8.09 9.91a16 16 0 006 6l1.27-1.27a2 2 0 012.11-.45c.91.339 1.85.573 2.81.7A2 2 0 0122 16.92z"/></svg>Call Hire Desk</a></div>
+    <div class="m-foot"><div class="m-fi"><strong>Navan Hire &amp; Hardware</strong><br>046 902 2535 · hiredesk@nhh.ie</div><a href="tel:0469022535" class="call-btn"><i data-lucide="phone"></i>Call Hire Desk</a></div>
   </div></div>
-  <button class="back-fab" onclick="hideMach()"><svg viewBox="0 0 24 24"><line x1="19" y1="12" x2="5" y2="12"/><polyline points="12 19 5 12 12 5"/></svg>Back to Portal</button>
+  <button class="back-fab" onclick="hideMach()"><i data-lucide="arrow-left"></i>Back to Portal</button>
 </div>
 
 <!-- OFF-HIRE MODAL (from contracts table) -->
@@ -595,14 +610,14 @@ tbody tr.clickable:hover td{background:#fff5f5}
   <div class="m-hdr"><h2>Pay Invoice</h2><div class="m-x" onclick="closeM('ov-pay')">&#10005;</div></div>
   <div class="m-body">
     <div class="m-ref" id="pay-ref"></div>
-    <div class="info blue" style="margin-bottom:14px"><h3>&#128274; Secure Payment via Stripe</h3>You will be redirected to our secure Stripe payment page to complete payment. Your card details are never stored by NHH.</div>
+    <div class="info blue" style="margin-bottom:14px"><h3><i data-lucide="lock" style="width:14px;height:14px;vertical-align:-2px"></i> Secure Payment via Stripe</h3>You will be redirected to our secure Stripe payment page to complete payment. Your card details are never stored by NHH.</div>
     <div style="font-size:13px;color:var(--grey);margin-bottom:14px">Amount due: <strong style="color:#111;font-size:16px" id="pay-amount"></strong></div>
     <div class="fg"><label>Your Name / Company</label><input type="text" value="McCormack Building Ltd"></div>
     <div class="fg"><label>Email for Receipt</label><input type="email" id="pay-email"></div>
   </div>
   <div class="m-foot2">
     <button class="btn btn-sm btn-out" onclick="closeM('ov-pay')">Cancel</button>
-    <button class="btn btn-sm btn-green" onclick="goStripe()">&#128274; Pay via Stripe →</button>
+    <button class="btn btn-sm btn-green" onclick="goStripe()"><i data-lucide="lock" style="width:14px;height:14px;vertical-align:-2px"></i> Pay via Stripe →</button>
   </div>
 </div></div>
 
@@ -618,9 +633,9 @@ tbody tr.clickable:hover td{background:#fff5f5}
       <p><a href="tel:0469022535" style="color:#fff">046 902 2535</a></p>
       <p><a href="mailto:hiredesk@nhh.ie">hiredesk@nhh.ie</a></p>
       <div class="soc">
-        <a href="#"><svg viewBox="0 0 24 24" fill="currentColor"><path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"/></svg></a>
-        <a href="#"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="2" y="2" width="20" height="20" rx="5"/><circle cx="12" cy="12" r="4"/><circle cx="17.5" cy="6.5" r="1" fill="currentColor" stroke="none"/></svg></a>
-        <a href="#"><svg viewBox="0 0 24 24" fill="currentColor"><path d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-4 0v7h-4v-7a6 6 0 016-6z"/><rect x="2" y="9" width="4" height="12"/><circle cx="4" cy="4" r="2"/></svg></a>
+        <a href="#"><i data-lucide="facebook"></i></a>
+        <a href="#"><i data-lucide="instagram"></i></a>
+        <a href="#"><i data-lucide="linkedin"></i></a>
       </div>
     </div>
     <div class="fc"><h4>Hire</h4><ul><li><a href="#">Hire Fleet</a></li><li><a href="#">Plant &amp; Tool Hire</a></li><li><a href="#">Access &amp; Spider Lifts</a></li><li><a href="#">Telehandlers</a></li></ul></div>
@@ -917,5 +932,6 @@ document.addEventListener('keydown', function(e) {
   });
 });
 </script>
+<script>lucide.createIcons();</script>
 </body>
 </html>
