--- a/telehandlers.html
+++ b/telehandlers.html
@@ -8,54 +8,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;600;700;800&family=Barlow:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css"/>
+  <script src="https://unpkg.com/lucide@latest"></script>
 </head>
 <body>
-  <div class="topbar">
-    <div class="container topbar-inner">
-      <span>&#128222; <a href="tel:0469022535">046 902 2535</a></span>
-      <span>&#128336; Mon&ndash;Fri: 7am&ndash;5pm &nbsp;|&nbsp; Sat: 8:30am&ndash;1pm</span>
-      <span>&#128205; Kells Road, Navan, Co. Meath</span>
-    </div>
-  </div>
-  <header class="header">
-    <div class="container header-inner">
-      <a href="index.html" class="logo">
-        <img src="logo.svg" alt="Navan Hire &amp; Hardware" class="logo-img"/>
-      </a>
-            <nav class="nav">
-        <a href="index.html" class="nav-link">Home</a>
-        <a href="hardware.html" class="nav-link">Hardware &amp; DIY</a>
-        <a href="telehandlers.html" class="nav-link active">Telehandlers</a>
-        <a href="hire.html" class="nav-link">Plant &amp; Tool Hire</a>
-        <a href="powered-access.html" class="nav-link">Access &amp; Spider Lifts</a>
-      </nav>
-      <div class="nhh-search-wrap">
-        <input type="search" id="nhhSearch" class="nhh-search-input" placeholder="Search equipment..." autocomplete="off" spellcheck="false"/>
-        <span class="nhh-search-icon">&#128269;</span>
-        <div class="nhh-search-results" id="nhhSearchResults"></div>
-      </div>
-      <a href="contact.html" class="btn btn-white header-cta">Get a Quote</a>
-      <a href="account.html" class="nhh-account-btn" title="Trade Login / Apply" aria-label="Account">
-        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
-          <circle cx="12" cy="8" r="4"/>
-          <path d="M4 20c0-4 3.6-7 8-7s8 3 8 7"/>
-        </svg>
-      </a>
-      <button class="hamburger" id="hamburger" aria-label="Open menu">&#9776;</button>
-    </div>
-        <div class="mobile-nav" id="mobileNav">
-      <a href="index.html">Home</a>
-      <a href="hardware.html">Hardware & DIY</a>
-      <a href="telehandlers.html">Telehandlers</a>
-      <a href="hire.html">Plant & Tool Hire</a>
-      <a href="powered-access.html">Access & Spider Lifts</a>
-      <a href="contact.html">Get a Quote</a>
-      <div class="mobile-search-wrap">
-        <input type="search" id="nhhSearchMob" class="nhh-search-input" placeholder="Search all equipment..." autocomplete="off" spellcheck="false"/>
-        <div class="nhh-search-results" id="nhhSearchResultsMob"></div>
-      </div>
-    </div>
-  </header>
+  <div class="topbar" data-component></div>
+  <header class="header" data-component></header>
 
   <section class="pa-hero">
     <div class="container">
@@ -79,7 +36,7 @@
           <!-- IMAGE SLOT: save photo as images/telehandlers/360-roto.jpg -->
           <div class="pa-card-img" style="background-image:url('images/telehandlers/360-roto.jpg')">
             <div class="pa-card-img-placeholder">
-              <span class="pa-card-img-icon">🔄</span>
+              <span class="pa-card-img-icon"><i data-lucide="rotate-cw"></i></span>
               <span class="pa-card-img-hint">&#128247; images/telehandlers/360-roto.jpg</span>
             </div>
           </div>
@@ -94,7 +51,7 @@
           <!-- IMAGE SLOT: save photo as images/telehandlers/straight.jpg -->
           <div class="pa-card-img" style="background-image:url('images/telehandlers/straight.jpg')">
             <div class="pa-card-img-placeholder">
-              <span class="pa-card-img-icon">📏</span>
+              <span class="pa-card-img-icon"><i data-lucide="ruler"></i></span>
               <span class="pa-card-img-hint">&#128247; images/telehandlers/straight.jpg</span>
             </div>
           </div>
@@ -109,7 +66,7 @@
           <!-- IMAGE SLOT: save photo as images/telehandlers/buggyscopic.jpg -->
           <div class="pa-card-img" style="background-image:url('images/telehandlers/buggyscopic.jpg')">
             <div class="pa-card-img-placeholder">
-              <span class="pa-card-img-icon">🚜</span>
+              <span class="pa-card-img-icon"><i data-lucide="tractor"></i></span>
               <span class="pa-card-img-hint">&#128247; images/telehandlers/buggyscopic.jpg</span>
             </div>
           </div>
@@ -124,7 +81,7 @@
           <!-- IMAGE SLOT: save photo as images/telehandlers/forklifts.jpg -->
           <div class="pa-card-img" style="background-image:url('images/telehandlers/forklifts.jpg')">
             <div class="pa-card-img-placeholder">
-              <span class="pa-card-img-icon">🏭</span>
+              <span class="pa-card-img-icon"><i data-lucide="factory"></i></span>
               <span class="pa-card-img-hint">&#128247; images/telehandlers/forklifts.jpg</span>
             </div>
           </div>
@@ -139,7 +96,7 @@
           <!-- IMAGE SLOT: save photo as images/telehandlers/attachments.jpg -->
           <div class="pa-card-img" style="background-image:url('images/telehandlers/attachments.jpg')">
             <div class="pa-card-img-placeholder">
-              <span class="pa-card-img-icon">🔧</span>
+              <span class="pa-card-img-icon"><i data-lucide="wrench"></i></span>
               <span class="pa-card-img-hint">&#128247; images/telehandlers/attachments.jpg</span>
             </div>
           </div>
@@ -175,7 +132,7 @@
         <p>Call us and we'll advise on the right telehandler for your lift, reach and site conditions.</p>
       </div>
       <div class="cta-actions">
-        <a href="tel:0469022535" class="btn btn-white btn-lg">&#128222; 046 902 2535</a>
+        <a href="tel:0469022535" class="btn btn-white btn-lg"><i data-lucide="phone" class="btn-icon"></i> 046 902 2535</a>
         <a href="contact.html" class="btn btn-outline-white btn-lg">Send Enquiry</a>
       </div>
     </div>
@@ -184,7 +141,7 @@
   <script>
   var TH_DATA = {"360° Roto Telehandlers": [{"name": "TELEPORTER 360 26 MTR 6 TON LIFT", "d1": "850", "d2": "1150", "d3": "1400", "we": "995"}, {"name": "TELEPORTER 360 30 MTR 6 TON LIFT", "d1": "1050", "d2": "1550", "d3": "1800", "we": "1250"}, {"name": "TELEPORTER 360 35 MTR 7 TON LIFT", "d1": "1150", "d2": "1750", "d3": "2100", "we": "1450"}, {"name": "MAGNI RTH 6.51 ROTO TELEHANDLER", "d1": "1550", "d2": "2150", "d3": "3350", "we": "1750"}, {"name": "MAGNI RTH 8.35 ROTO TELEHANDLER", "d1": "1150", "d2": "1750", "d3": "2100", "we": "1450"}, {"name": "MAGNI RTH 8.39 ROTO TELEHANDLER", "d1": "1350", "d2": "1950", "d3": "2500", "we": "1550"}], "Straight Telehandlers": [{"name": "TELEPORTER JCB 14mtr", "d1": "250", "d2": "325", "d3": "395", "we": "295"}, {"name": "TELEPORTER 17-18 MTR", "d1": "325", "d2": "475", "d3": "450", "we": "325"}, {"name": "TELEPORTER 20 MTR", "d1": "350", "d2": "495", "d3": "600", "we": "350"}], "Buggyscopic Telehandlers": [{"name": "TELEPORTER BUGGYSCOPIC", "d1": "250", "d2": "325", "d3": "395", "we": "295"}, {"name": "TELEPORTER 7M FARM HAND BUGGY", "d1": "250", "d2": "325", "d3": "395", "we": "250"}], "Forklifts": [{"name": "FORKLIFT 3 TON", "d1": "160", "d2": "250", "d3": "295", "we": "160"}, {"name": "FORKLIFT 2 TON ELECTRIC (HELI)", "d1": "120", "d2": "195", "d3": "250", "we": "150"}], "Telehandler Attachments": [{"name": "TELEPORTER 4 FT CAGE BASKET", "d1": "65", "d2": "120", "d3": "150", "we": "85"}, {"name": "P6000 PENCIL 2 HOOK JIB 6 TON", "d1": "65", "d2": "120", "d3": "150", "we": "85"}, {"name": "WINCH 5 TON", "d1": "65", "d2": "120", "d3": "150", "we": "85"}, {"name": "PC60 SHORT JIB 6 TON", "d1": "65", "d2": "120", "d3": "150", "we": "85"}, {"name": "PT2000 EXTENSION JIB C/W WINCH 2 TON", "d1": "65", "d2": "120", "d3": "150", "we": "85"}, {"name": "MAN BASKET", "d1": "100", "d2": "150", "d3": "195", "we": "125"}, {"name": "SWEEPER ATTACHMENT FOR TELEPORTER C/W WATER TANK", "d1": "100", "d2": "175", "d3": "250", "we": "125"}]};
   var TH_CAT_NAMES = ["360° Roto Telehandlers", "Straight Telehandlers", "Buggyscopic Telehandlers", "Forklifts", "Telehandler Attachments"];
-  var TH_CAT_INFO = {"360° Roto Telehandlers": {"icon": "🔄", "desc": "360° fully rotating telehandlers from 26m to 35m reach. Lift, place and rotate without repositioning.", "img": "images/telehandlers/360-roto.jpg"}, "Straight Telehandlers": {"icon": "📏", "desc": "Fixed-boom telehandlers from 14m to 20m reach. Reliable for block laying, roofing and material placement.", "img": "images/telehandlers/straight.jpg"}, "Buggyscopic Telehandlers": {"icon": "🚜", "desc": "Compact buggyscopic telehandlers from 4m to 9m. Highly manoeuvrable for confined sites and agricultural work.", "img": "images/telehandlers/buggyscopic.jpg"}, "Forklifts": {"icon": "🏭", "desc": "Electric and diesel counterbalance forklifts. 2 and 3 tonne capacity available.", "img": "images/telehandlers/forklifts.jpg"}, "Telehandler Attachments": {"icon": "🔧", "desc": "Man baskets, jibs, winches and sweepers. Extend the capability of any telehandler on site.", "img": "images/telehandlers/attachments.jpg"}};
+  var TH_CAT_INFO = {"360° Roto Telehandlers": {"icon": "<i data-lucide=\"rotate-cw\"></i>", "desc": "360° fully rotating telehandlers from 26m to 35m reach. Lift, place and rotate without repositioning.", "img": "images/telehandlers/360-roto.jpg"}, "Straight Telehandlers": {"icon": "<i data-lucide=\"ruler\"></i>", "desc": "Fixed-boom telehandlers from 14m to 20m reach. Reliable for block laying, roofing and material placement.", "img": "images/telehandlers/straight.jpg"}, "Buggyscopic Telehandlers": {"icon": "<i data-lucide=\"tractor\"></i>", "desc": "Compact buggyscopic telehandlers from 4m to 9m. Highly manoeuvrable for confined sites and agricultural work.", "img": "images/telehandlers/buggyscopic.jpg"}, "Forklifts": {"icon": "<i data-lucide=\"factory\"></i>", "desc": "Electric and diesel counterbalance forklifts. 2 and 3 tonne capacity available.", "img": "images/telehandlers/forklifts.jpg"}, "Telehandler Attachments": {"icon": "<i data-lucide=\"wrench\"></i>", "desc": "Man baskets, jibs, winches and sweepers. Extend the capability of any telehandler on site.", "img": "images/telehandlers/attachments.jpg"}};
 
   var thCurCat = null;
 
@@ -331,7 +288,7 @@
     if (btn) { btn.textContent = '\u2705 Ready to Send!'; btn.disabled = true; btn.style.background = '#22a84d'; }
     var msg = document.createElement('div');
     msg.className = 'hc-success';
-    msg.innerHTML = 'Hi <strong>' + escH(name) + '</strong>! Click below to open your email, or call <a href="tel:0469022535">046 902 2535</a>.<br><br><a href="mailto:hiredesk@nhh.ie?subject=' + subj + '&body=' + body + '" class="btn btn-primary" style="display:inline-block;margin-top:8px">&#128231; Open Email to Send</a>';
+    msg.innerHTML = 'Hi <strong>' + escH(name) + '</strong>! Click below to open your email, or call <a href="tel:0469022535">046 902 2535</a>.<br><br><a href="mailto:hiredesk@nhh.ie?subject=' + subj + '&body=' + body + '" class="btn btn-primary" style="display:inline-block;margin-top:8px"><i data-lucide="mail" class="btn-icon"></i> Open Email to Send</a>';
     document.getElementById('thProdDetail').appendChild(msg);
   }
 
@@ -355,56 +312,11 @@
     onReset: function() {}
   });
   </script>
-
-  <footer class="footer">
-    <div class="container footer-grid">
-      <div class="footer-col">
-        <img src="logo-footer.svg" alt="Navan Hire &amp; Hardware" class="footer-logo-img"/>
-        <p style="margin-top:14px;color:rgba(255,255,255,0.7)">Whistlemount, Kells Road<br>Navan, Co. Meath, C15 FX6Y</p>
-        <p><a href="tel:0469022535" style="color:#fff">046 902 2535</a></p>
-        <p><a href="mailto:hiredesk@nhh.ie" style="color:rgba(255,255,255,0.7)">hiredesk@nhh.ie</a></p>
-      </div>
-      <div class="footer-col">
-        <h4>Hire</h4>
-        <ul>
-          <li><a href="fleet.html">Hire Fleet</a></li>
-          <li><a href="hire.html">Plant &amp; Tool Hire</a></li>
-          <li><a href="powered-access.html">Access &amp; Spider Lifts</a></li>
-          <li><a href="telehandlers.html">Telehandlers</a></li>
-        </ul>
-      </div>
-      <div class="footer-col">
-        <h4>Company</h4>
-        <ul>
-          <li><a href="hardware.html">Hardware &amp; DIY</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
-          <li><a href="account.html">Trade Account</a></li>
-        </ul>
-      </div>
-      <div class="footer-col">
-        <h4>Opening Hours</h4>
-        <p style="color:rgba(255,255,255,0.7)">Mon&ndash;Fri: 7:00am &ndash; 5:00pm<br>Saturday: 8:30am &ndash; 1:00pm<br>Sunday: Closed</p>
-        <div class="social-links">
-          <a href="https://www.facebook.com/NavanHireHardware" target="_blank" rel="noopener" aria-label="Facebook">
-            <svg viewBox="0 0 24 24" fill="currentColor"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"/></svg>
-          </a>
-          <a href="https://www.instagram.com/navanhirehardware" target="_blank" rel="noopener" aria-label="Instagram">
-            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"/><circle cx="12" cy="12" r="4"/><circle cx="17.5" cy="6.5" r="1" fill="currentColor" stroke="none"/></svg>
-          </a>
-          <a href="https://www.linkedin.com/company/navan-hire-hardware" target="_blank" rel="noopener" aria-label="LinkedIn">
-            <svg viewBox="0 0 24 24" fill="currentColor"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"/><rect x="2" y="9" width="4" height="12"/><circle cx="4" cy="4" r="2"/></svg>
-          </a>
-        </div>
-      </div>
-    </div>
-    <div class="footer-bottom">
-      <div class="container">
-        <p>&copy; 2026 Navan Hire &amp; Hardware. All rights reserved. | 100% Irish Owned</p>
-      </div>
-    </div>
-  </footer>
+  <footer class="footer" data-component></footer>
+  <script src="components.js"></script>
   <script src="prod-tabs.js"></script>
   <script src="search.js"></script>
   <script src="main.js"></script>
+  <script>lucide.createIcons();</script>
 </body>
 </html>
